--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
     <meta charset="utf-8">
     <title>jdanford</title>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/base.css">
   </head>
   <body>
     <div id="main" class="container">
       <h1>Some things</h1>
-      <a href="/wyrms.html">
-        <h3>wyrms</h3>
-      </a>
+      <a href="wyrms.html"><h3>wyrms</h3></a>
     </div>
 
-    <script src="js/jquery.js"></script>
-    <script src="js/lodash.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/lodash.js"></script>
+    <script type="text/javascript" src="js/bootstrap.js"></script>
   </body>
 </html>
