--- a/wyrms.html
+++ b/wyrms.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>jdanford | wyrms</title>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/base.css">
   </head>
   <body>
     <div id="main" class="container">
