--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="main" class="container">
       <h1>Some things</h1>
+      <a href="react/"><h3>An Introduction to React</h3></a>
       <a href="wyrms.html"><h3>wyrms</h3></a>
     </div>
 
