--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
     <div id="main" class="container">
       <h1>Some things</h1>
       <a href="react/"><h3>An Introduction to React</h3></a>
-      <a href="wyrms.html"><h3>wyrms</h3></a>
+      <a href="wyrms/"><h3>wyrms</h3></a>
     </div>
-
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/lodash.js"></script>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
   </body>
 </html>
