Add glyphs, update favicon

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <div id="main" class="container">
-      <h1>Some things</h1>
+      <h1>Cool things</h1>
+      <a href="glyphs/#0:qmrbupc-27:atnd"><h3>Glyphs</h3></a>
+      <hr>
+      <h2>Old things</h2>
       <a href="react/"><h3>An Introduction to React</h3></a>
       <a href="wyrms/"><h3>wyrms</h3></a>
     </div>
