Move wyrms to separate repository, update favicon

--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>jdanford</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/base.css">
-  </head>
-  <body>
-    <div id="main" class="container">
-      <h1>Cool things</h1>
-      <a href="glyphs/#0:qmrbupc-27:atnd"><h3>Glyphs</h3></a>
-      <hr>
-      <h2>Old things</h2>
-      <a href="react/"><h3>An Introduction to React</h3></a>
-      <a href="wyrms/"><h3>wyrms</h3></a>
-    </div>
-  </body>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Jordan Danford</title>
+  <link rel="shortcut icon" href="favicon.png" />
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/base.css">
+</head>
+<body>
+  <div id="main" class="container">
+    <h1>Cool things</h1>
+    <a href="glyphs/#0:qmrbupc-27:atnd"><h3>Glyphs</h3></a>
+    <a href="wyrms/"><h3>Wyrms</h3></a>
+    <hr>
+    <h2>Old things</h2>
+    <a href="react/"><h3>An Introduction to React</h3></a>
+  </div>
+</body>
 </html>
