Move React presentation to separate repository

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href="wyrms/"><h3>Wyrms</h3></a>
     <hr>
     <h2>Old things</h2>
-    <a href="react/"><h3>An Introduction to React</h3></a>
+    <a href="react-presentation/"><h3>An Introduction to React</h3></a>
   </div>
 </body>
 </html>
